--- a/style.css
+++ b/style.css
@@ -3,9 +3,17 @@
     font-family: Times New Roman;
 }
 
-.container {
 
+/*-- sub styles --*/
+
+#page-container {
+    text-align: center;
+}
+
+.container {
+    display: inline-block;
     width: 20rem;
+    height: 17rem;
     position: relative;
     padding: 1.2rem 1.2rem 0;
     margin: 0.4rem;
@@ -41,6 +49,55 @@
 }
 
 
+/** search bar **/
+
+#search {
+
+    display: inline-block;
+    font-size: 1rem;
+    width: 20rem;
+    margin: 0.4rem;
+    padding: .5rem;
+    border-radius: 5px;
+    box-shadow: 0;
+    border: 1px solid black;
+
+}
+
+
+
+
+
+/*** mag ***/
+
+#mag {
+    display: inline-block;
+    position: relative;
+    top: .15rem;
+    left: -2.1rem;
+    width: 1rem;
+    height: 1rem;
+    border: 2px solid lightgray;
+    border-radius: 75%;
+    background: white;
+}
+
+#mag:after{
+    content: "";
+    width: 2px;
+    height: .3rem;
+    position: relative;
+    display: inline-block;
+    background: lightgray;
+    transform: rotate(.38turn);
+    top: .15rem;
+    left: .75rem;
+}
+
+
+/*** container ***/
+
+.container {}
 
 
 
