--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@
 .title {
     display: block;
     border-bottom: 1px solid black;
+    height: 2rem;
+    overflow: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
 }
 
@@ -49,6 +53,9 @@
     text-overflow: ellipsis;
 }
 
+form {
+    text-align: center;
+}
 
 /** search bar **/
 
@@ -63,36 +70,6 @@
     box-shadow: 0;
     border: 1px solid black;
 
-}
-
-
-
-
-
-/*** mag ***/
-
-#mag {
-    display: inline-block;
-    position: relative;
-    top: .15rem;
-    left: -2.1rem;
-    width: 1rem;
-    height: 1rem;
-    border: 2px solid lightgray;
-    border-radius: 75%;
-    background: white;
-}
-
-#mag:after{
-    content: "";
-    width: 2px;
-    height: .3rem;
-    position: relative;
-    display: inline-block;
-    background: lightgray;
-    transform: rotate(.38turn);
-    top: .15rem;
-    left: .75rem;
 }
 
 
