--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    background: #081f2c;
+    color: #fcf5df;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -15,10 +17,10 @@
     width: 20rem;
     height: 17rem;
     position: relative;
-    padding: 1.2rem 1.2rem 0;
+    padding: 18px 18px 0;
     margin: 0.4rem;
     text-align: center;
-    border: 1px solid black;
+    border: 1px solid #fcf5df;
     transition: opacity .5s ease;
     cursor: pointer;
 
@@ -32,17 +34,24 @@
     height: 3.5rem;
     bottom: 0;
     left: 0;
-    background: linear-gradient(rgba(255,0,0,0), rgba(255,255,255,1));
+    background: linear-gradient(rgba(8,31,44,0), rgba(8,31,44,1));
 }
+
+
+/*-- container on hover (decreased padding on border growth)--*/
 
 .container:hover {
-    border: 3px solid black;
-
+    border: 4px solid #fcf5df;
+    padding: 15px 15px 0;
 }
+
+
+
+
 
 .title {
     display: block;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #fcf5df;
     height: 1.8rem;
     overflow: wrap;
     overflow: hidden;
@@ -74,7 +83,7 @@ form {
     padding: .5rem;
     border-radius: 5px;
     box-shadow: 0;
-    border: 1px solid black;
+    border: 1px solid #fcf5df;
 
 }
 
