Add css styling to extract for grey font, thin, 1.5rem line height

--- a/style.css
+++ b/style.css
@@ -67,6 +67,9 @@
     white-space: wrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-weight: 100;
+    color: lightgray;
+    line-height: 1.5rem;
 }
 
 form {
